--- a/burgers/templates/burgers/order_burgers.html
+++ b/burgers/templates/burgers/order_burgers.html
@@ -12,6 +12,6 @@
     <button type="submit">Submit Order</button>
   </form>
   <a href="{% url 'view_orders' %}">View Your Orders</a><br>
-    <a href="..\">Back</a>
+    <a href="..\..\">Back</a>
 </body>
 </html>
